form spacing issue fixed

--- a/css/style.less
+++ b/css/style.less
@@ -1010,12 +1010,12 @@ body {
                                         .nameDiv,
                                         .detailsDiv {
                                             .inputContainer {
-                                                max-width: 190px;
+                                                max-width: 280px;
                                             }
                                         }
 
                                         .btns {
-                                            max-width: 486px;
+                                            max-width: 600px;
 
                                         }
 
